--- a/smart_contracts/package.json
+++ b/smart_contracts/package.json
@@ -22,10 +22,13 @@
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@openzeppelin/contracts": "^4.9.6",
     "dotenv": "^17.2.3",
-    "hardhat": "^2.26.2",
+    "hardhat": "^2.28.3",
     "hardhat-deploy": "^1.0.4",
     "hardhat-gas-reporter": "^2.3.0",
     "hardhat-verify": "^1.0.0",
     "solidity-coverage": "^0.8.17"
+  },
+  "dependencies": {
+    "monad": "^0.0.3"
   }
 }
