--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "ipfs-http-client": "^60.0.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.341.0",
     "mongodb": "^6.15.0",
     "mongoose": "^9.1.5",
