--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.19.1",
     "uploadthing": "^7.4.4",
     "vaul": "^1.1.2",
     "viem": "^2.7.9",
