--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm ci
 
       - name: Run security audit (fail on high+)
-        run: npm audit --audit-level=high
+        run: npm audit --audit-level=moderate
 
       - name: CodeQL Init
         uses: github/codeql-action/init@v3
