fix: Dark mode styling for dropdowns and input fields (#225)
- Fixed white backgrounds in dark mode for input, select, and textarea components
- Added dark mode styling to 'Back to Base' button on AI story page
- Fixed TypeScript errors in web3-provider component
- Added cross-env for Windows compatibility in build scripts
- Made MongoDB optional for development mode

Fixes #225

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "dev": "concurrently \"next dev\" \"nodemon server/backend.js\"",
-    "build": "NEXT_PUBLIC_BUILD_MODE=true next build",
+    "build": "cross-env NEXT_PUBLIC_BUILD_MODE=true next build",
     "start": "concurrently \"next start\" \"node server/backend.js\"",
     "vercel-build": "npm run prepare-vercel && npm run build",
     "lint": "next lint",
@@ -95,11 +95,13 @@
     "alchemy-sdk": "^3.5.7",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "compression": "^1.8.1",
     "concat-stream": "github:maxogden/concat-stream",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.5.0",
@@ -107,14 +109,17 @@
     "ethers": "^6.11.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "framer-motion": "^11.0.5",
     "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "ipfs-http-client": "^60.0.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.341.0",
     "mongodb": "^6.15.0",
     "mongoose": "^9.1.5",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.5",
     "next": "14.1.0",
     "next-auth": "^4.24.13",
@@ -148,6 +153,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.14",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
