--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "mongodb-memory-server": "^11.0.1",
     "next-style-loader": "^0.3.1",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.23",
