Fix logger; add enhanced implementation & tests
Replace the broken logger with a production-ready implementation and add tests/docs. Renamed lib/logger-broken.ts → lib/logger-enhanced.ts, updated lib/logger.ts (stable API), and backed up the previous simple logger as lib/logger-simple.ts.backup. Added a 31-test suite (tests/lib/logger.test.ts), Jest config/setup, PR template, and comprehensive docs (LOGGER_FIX.md and docs/LOGGER_FIX.md). Restores correct log-level filtering, console method mapping, JSON formatting, performance timing, child loggers, and remote/file logging support; also updates package.json for test dependencies.

--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.17.30",
@@ -175,6 +176,7 @@
     "prettier": "^3.2.5",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
