fix: address CodeRabbit review feedback
- Parse x-forwarded-for properly (split on comma, take first IP)
- Add getClientIp() helper to rate-limit.ts, used in all 3 routes
- Wrap limiter.limit() in try/catch to fail open on Redis errors
- Add CI env vars (MONGODB_URI, NEXTAUTH_SECRET, NEXTAUTH_URL) to e2e job
- Move pageerror listener to beforeEach in homepage E2E test
- Use heading role locator instead of broad getByText('Create')
- Replace broken button with Link in profile page
- Remove redundant createdAt from Story schema (timestamps: true handles it)
- Fix @upstash/ratelimit version to ^2.0.5
- Update stale Next.js version in performance-baseline docs
- Mark NFTCard memo() recommendation as resolved
- Add time-based expiry for pending transactions in mintWorker

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -77,6 +77,10 @@ jobs:
   e2e-tests:
     name: E2E Tests
     runs-on: ubuntu-latest
+    env:
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+      NEXTAUTH_URL: ${{ secrets.NEXTAUTH_URL }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
