--- a/server/package.json
+++ b/server/package.json
@@ -26,11 +26,14 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "8.5.3",
     "morgan": "1.10.0",
+    "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "3.1.4"
