--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "groqtales",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "private": true,
   "description": "Enterprise-grade AI-powered Web3 storytelling platform with NFT integration",
   "author": "GroqTales Team",
@@ -106,7 +106,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "compression": "^1.8.1",
-    "concat-stream": "github:maxogden/concat-stream",
+    "concat-stream": "^2.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
