--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "@tanstack/react-query": "^5.74.3",
     "@uploadthing/react": "^7.1.0",
     "@upstash/redis": "^1.36.2",
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "@web3modal/wagmi": "^4.0.0-alpha.0",
     "alchemy-sdk": "^3.5.7",
     "axios": "^1.9.0",
