--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "npm run vercel-build",
   "devCommand": "npm run dev",
-  "installCommand": "npm ci",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
   "regions": [
     "iad1"
