feat: implement real monad testnet viem integration (Fixes #414)

--- a/.env.example
+++ b/.env.example
@@ -71,13 +71,15 @@ NEXT_PUBLIC_BASE_RPC_URL=your_base_rpc_url_here
 NEXT_PUBLIC_BASE_CHAIN_ID=your_base_chain_id_here
 
 # Monad Network Configuration
-MONAD_TEST_RPC_URL=your_monad_rpc_url_here
+# Required for viem integration (Issue #414)
+MONAD_TEST_RPC_URL=https://testnet-rpc.monad.xyz
 MONAD_MAIN_RPC_URL=your_monad_rpc_url_here
 MINTER_PRIVATE_KEY=your_minter_private_key_here
 MONADSCAN_API_KEY=your_monadscan_api_key_here
 
 # Contract addresses
-NEXT_PUBLIC_STORY_NFT_CONTRACT=0x...
+# Used by viem service integration for minting and fetching (Issue #414)
+NEXT_PUBLIC_STORY_NFT_CONTRACT=0xYourErc721ContractAddressHere
 NEXT_PUBLIC_MARKETPLACE_CONTRACT=0x...
 
 # Wallet Connect (note: correct spelling)
