--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -26,13 +26,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Resolve app version from VERSION file
+        run: echo "APP_VERSION=$(cat VERSION | tr -d '[:space:']')" >> $GITHUB_ENV
+
       - name: Build Next.js app
         run: npm run build
         env:
           MONGODB_URI: mongodb://localhost:27017/Groqtales
           NEXT_PUBLIC_BUILD_MODE: 'true'
           NEXT_PUBLIC_URL: 'http://localhost:3000'
-          NEXT_PUBLIC_VERSION: '1.0.0'
+          NEXT_PUBLIC_VERSION: ${{ env.APP_VERSION }}
           NEXT_PUBLIC_IMAGE_URL: 'http://localhost:3000/images'
           NEXT_PUBLIC_SPLASH_IMAGE_URL: 'http://localhost:3000/splash.jpg'
           NEXT_PUBLIC_SPLASH_BACKGROUND_COLOR: '#1a1a2e'
@@ -65,7 +68,7 @@ jobs:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
           NEXT_PUBLIC_BUILD_MODE: 'true'
           NEXT_PUBLIC_URL: 'http://localhost:3000'
-          NEXT_PUBLIC_VERSION: '1.0.0'
+          NEXT_PUBLIC_VERSION: ${{ env.APP_VERSION }}
           NEXT_PUBLIC_IMAGE_URL: 'http://localhost:3000/images'
           NEXT_PUBLIC_SPLASH_IMAGE_URL: 'http://localhost:3000/splash.jpg'
           NEXT_PUBLIC_SPLASH_BACKGROUND_COLOR: '#1a1a2e'
