Fix: resolve StoryMint alias, normalize storyHash, align idempotency scope, optimize rate-limit order

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
       "@/*": ["./src/*"],
       "@/components/*": ["./components/*"],
       "@/lib/*": ["./lib/*"],
+      "@/lib": ["./lib"],
+      "@/models/*": ["./models/*"],
+      "@/models": ["./models"],
       "@/types/*": ["./types/*"],
       "@/hooks/*": ["./hooks/*"],
       "@/utils/*": ["./utils/*"],
