Implement Cloudflare Worker with D1 for new API routes, enhance user profile management, and update documentation.

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ NODE_ENV=development
 
 # Required environment variables for the application
 NEXT_PUBLIC_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_SDK_URL=http://localhost:3002
 NEXT_PUBLIC_ONCHAINKIT_PROJECT_NAME=GroqTales
 NEXT_PUBLIC_VERSION=1.0.0
 NEXT_PUBLIC_IMAGE_URL=https://groqtales.com/images
