--- a/wrangler.toml
+++ b/wrangler.toml
@@ -35,15 +35,16 @@ compatibility_flags = ["nodejs_compat"]
 #   NEXT_PUBLIC_IMAGE_URL                 = https://groqtales.xyz/images
 #   NEXT_PUBLIC_SPLASH_IMAGE_URL          = https://groqtales.xyz/splash.jpg
 #   NEXT_PUBLIC_SPLASH_BACKGROUND_COLOR   = #1a1a2e
-#   NEXT_PUBLIC_GROQ_API_KEY              = <secret>
+#   GROQ_API_KEY              = <secret>
 #   NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID = <secret>
-#   NEXT_PUBLIC_API_URL                   = https://groqtales-api.onrender.com
+#   NEXT_PUBLIC_API_URL                   = https://groqtales-backend-api.onrender.com
+#   NEXT_PUBLIC_SDK_URL                   = https://groqtales-sdk-service.onrender.com
 #   SUPABASE_URL                          = <secret>
 #   SUPABASE_ANON_KEY                     = <secret>
 #   SUPABASE_SERVICE_ROLE_KEY             = <secret>
 #   NEXT_PUBLIC_SUPABASE_URL              = <secret>
 #   NEXT_PUBLIC_SUPABASE_ANON_KEY         = <secret>
-#   MONGODB_URI                           = <secret>
+#   MONGODB_URI                           = mongodb+srv://Vercel-Admin-groqtales:wDw93aLOutpSOVjT@groqtales.k5nbcgj.mongodb.net/?retryWrites=true&w=majority
 #   MONGODB_DB_NAME                       = groqtales
 #   JWT_SECRET                            = <secret>
 #   NEXTAUTH_SECRET                       = <secret>
