--- a/wrangler.toml
+++ b/wrangler.toml
@@ -44,7 +44,7 @@ compatibility_flags = ["nodejs_compat"]
 #   SUPABASE_SERVICE_ROLE_KEY             = <secret>
 #   NEXT_PUBLIC_SUPABASE_URL              = <secret>
 #   NEXT_PUBLIC_SUPABASE_ANON_KEY         = <secret>
-#   MONGODB_URI                           = mongodb+srv://Vercel-Admin-groqtales:wDw93aLOutpSOVjT@groqtales.k5nbcgj.mongodb.net/?retryWrites=true&w=majority
+#   MONGODB_URI                           = <secret>
 #   MONGODB_DB_NAME                       = groqtales
 #   JWT_SECRET                            = <secret>
 #   NEXTAUTH_SECRET                       = <secret>
